code html and css Allamanda

--- a/detailgallery.html
+++ b/detailgallery.html
@@ -44,9 +44,8 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/vendor-f3749da992.min.css">
-  <link rel="stylesheet" href="styles/style-9460582599.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css" />
+  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <!-- endbuild -->
   <!-- css slick -->
 
 </head>
@@ -66,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -158,21 +157,21 @@
             <div class="center">
               <div class="item-gallery">
                 <div class="body-bg">
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum1.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum1.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum2.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum2.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum3.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum3.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum4.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum4.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum5.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum5.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum6.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum6.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum7.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum7.png')">
                   </div>
                 </div>
                 <div class="next-prev">
@@ -180,21 +179,21 @@
                   <span class="fa fa-angle-right right"></span>
                 </div>
                 <div class="body-img">
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum1.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum1.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum2.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum2.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum3.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum3.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum4.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum4.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum5.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum5.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum6.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum6.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum7.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum7.png)">
                   </div>
                 </div>
               </div>
@@ -238,12 +237,8 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-1da5849c8d.min.js"></script>
-  <script src="scripts/script-132506632e.min.js"></script>
-  <!-- js slick -->
-  <!--js gmap3-->
+  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
 
-  <!-- end js gmap3-->
 
 </body>
 
