--- a/gallery.html
+++ b/gallery.html
@@ -44,9 +44,8 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/vendor-f3749da992.min.css">
-  <link rel="stylesheet" href="styles/style-9460582599.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css" />
+  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <!-- endbuild -->
   <!-- css slick -->
 
 </head>
@@ -66,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -158,36 +157,36 @@
             <div class="center">
 
               <div class="item-gallery">
-                <div class="gallery-slider" style="background-image: url('../../images/gallery/bgb2.png')">
+                <div class="gallery-slider" style="background-image: url('images/gallery/bgb2.png')">
                   <div class="body-gallery">
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgc5.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc5.png)">
                       <h3 class="title-villa">
                         <a class="txt-link" href="/detailgallery.html">Villas Sen</a>
                       </h3>
                     </div>
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgb.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgb.png)">
                       <h3 class="title-villa">
                         <a href="/detailgallery.html" class="txt-link">Villas Mai</a>
                       </h3>
                     </div>
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgc3.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
                         <a href="/detailgallery.html" class="txt-link">Villas Anh</a>
                       </h3>
                     </div>
 
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgc3.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
                         <a href="/detailgallery.html" class="txt-link">Bedroom</a>
                       </h3>
                     </div>
 
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgc3.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
                         <a href="/detailgallery.html" class="txt-link">Living area</a>
                       </h3>
                     </div>
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(../../images/gallery/bgc3.png)">
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
                         <a href="/detailgallery.html" class="txt-link">Our awesome services</a>
                       </h3>
@@ -237,12 +236,8 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-1da5849c8d.min.js"></script>
-  <script src="scripts/script-132506632e.min.js"></script>
-  <!-- js slick -->
-  <!--js gmap3-->
+  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
 
-  <!-- end js gmap3-->
 
 </body>
 
