--- a/contact.html
+++ b/contact.html
@@ -44,9 +44,8 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/vendor-f3749da992.min.css">
-  <link rel="stylesheet" href="styles/style-9460582599.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css" />
+  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <!-- endbuild -->
   <!-- css slick -->
 
 </head>
@@ -66,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -157,7 +156,7 @@
           <div class="row">
             <div class="center">
               <div class="body-review">
-                <div class="bg-review" style="background-image: url('../../images/contact/slider-contact.png')">
+                <div class="bg-review" style="background-image: url('images/contact/slider-contact.png')">
                   <div class="title-review">
                     <h3 class="title">Contact Us</h3>
                   </div>
@@ -232,12 +231,8 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-1da5849c8d.min.js"></script>
-  <script src="scripts/script-132506632e.min.js"></script>
-  <!-- js slick -->
-  <!--js gmap3-->
+  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
 
-  <!-- end js gmap3-->
 
 </body>
 
