--- a/villas-slide.html
+++ b/villas-slide.html
@@ -44,9 +44,8 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/vendor-f3749da992.min.css">
-  <link rel="stylesheet" href="styles/style-9460582599.min.css">
-  <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.7.1/slick.css" />
+  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <!-- endbuild -->
   <!-- css slick -->
 
 </head>
@@ -66,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -158,7 +157,7 @@
             <div class="center">
               <div class="item-home">
                 <div class="item-slider-villas">
-                  <div class="thevillas-slider" style="background-image: url('../../images/contact/slider-contact1.png')">
+                  <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact1.png')">
                   </div>
                   <div class="title-slidervillas">
                     <p class="des-villa animation w3-animate-top effect-two">An Oasis Away From Home</p>
@@ -171,7 +170,7 @@
                   </div>
                 </div>
                 <div class="item-slider-villas">
-                  <div class="thevillas-slider" style="background-image: url('../../images/contact/slider-contact2.png')">
+                  <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact2.png')">
                   </div>
                   <div class="title-slider-living animated w3-animate-zoom">
                     <div class="boder-living"></div>
@@ -181,7 +180,7 @@
                   </div>
                 </div>
                 <div class="item-slider-villas">
-                  <div class="thevillas-slider" style="background-image: url('../../images/contact/slider-contact4.png')">
+                  <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact4.png')">
                   </div>
                   <div class="title-slider-living animated w3-animate-zoom">
                     <div class="boder-living"></div>
@@ -190,7 +189,7 @@
                   </div>
                 </div>
                 <div class="item-slider-villas">
-                  <div class="thevillas-slider" style="background-image: url('../../images/contact/slider-contact5.png')">
+                  <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact5.png')">
                   </div>
                   <div class="title-slider-living title-slider-quich animated w3-animate-zoom">
                     <div class="boder-quich-tast"></div>
@@ -264,12 +263,8 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-1da5849c8d.min.js"></script>
-  <script src="scripts/script-132506632e.min.js"></script>
-  <!-- js slick -->
-  <!--js gmap3-->
+  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
 
-  <!-- end js gmap3-->
 
 </body>
 
