--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="images/logowhite.png" alt="logo">
+                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -85,19 +85,19 @@
                         <div class="center">
                           <div class="item-menu">
                             <div class="title-menu">
-                              <a class="link-menu color-white" href="/">
+                              <a class="link-menu color-white" href="/Alamanda-FE">
                             <span class="fa fa-home icon-menus"></span>
                             home
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/detailgallery.html">
+                              <a class="link-menu" href="/Alamanda-FE/detailgallery.html">
                             <span class="fa fa-delicious icon-menus"></span>
                             The Detail
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/villas-slide.html">
+                              <a class="link-menu" href="/Alamanda-FE/villas-slide.html">
                             <span class="fa fa-globe  icon-menus"></span>
                             Location
                           </a>
@@ -109,25 +109,25 @@
                         <div class="center">
                           <div class="item-menu ">
                             <div class="title-menu">
-                              <a class="link-menu" href="/gallery.html">
+                              <a class="link-menu" href="/Alamanda-FE/gallery.html">
                             <span class="fa fa-image icon-menus"></span>
                             Gallery
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/review.html">
+                              <a class="link-menu" href="/Alamanda-FE/review.html">
                             <span class="fa fa-retweet  icon-menus"></span>
                             Review
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/rate.html">
+                              <a class="link-menu" href="/Alamanda-FE/rate.html">
                             <span class="fa fa-ravelry  icon-menus"></span>
                             Rate
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/contact.html">
+                              <a class="link-menu" href="/Alamanda-FE/contact.html">
                             <span class="fa fa-envelope  icon-menus"></span>
                             Contactus
                           </a>
@@ -156,7 +156,7 @@
           <div class="row">
             <div class="center">
               <div class="body-review">
-                <div class="bg-review" style="background-image: url('images/contact/slider-contact.png')">
+                <div class="bg-review" style="background-image: url('../../images/contact/slider-contact.png')">
                   <div class="title-review">
                     <h3 class="title">Contact Us</h3>
                   </div>
@@ -231,7 +231,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
+  <script src="scripts/vendor-20ac8f67b1.min.js"></script>
 
 
 </body>
