--- a/detailgallery.html
+++ b/detailgallery.html
@@ -65,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="images/logowhite.png" alt="logo">
+                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -85,19 +85,19 @@
                         <div class="center">
                           <div class="item-menu">
                             <div class="title-menu">
-                              <a class="link-menu color-white" href="/">
+                              <a class="link-menu color-white" href="/Alamanda-FE">
                             <span class="fa fa-home icon-menus"></span>
                             home
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/detailgallery.html">
+                              <a class="link-menu" href="/Alamanda-FE/detailgallery.html">
                             <span class="fa fa-delicious icon-menus"></span>
                             The Detail
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/villas-slide.html">
+                              <a class="link-menu" href="/Alamanda-FE/villas-slide.html">
                             <span class="fa fa-globe  icon-menus"></span>
                             Location
                           </a>
@@ -109,25 +109,25 @@
                         <div class="center">
                           <div class="item-menu ">
                             <div class="title-menu">
-                              <a class="link-menu" href="/gallery.html">
+                              <a class="link-menu" href="/Alamanda-FE/gallery.html">
                             <span class="fa fa-image icon-menus"></span>
                             Gallery
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/review.html">
+                              <a class="link-menu" href="/Alamanda-FE/review.html">
                             <span class="fa fa-retweet  icon-menus"></span>
                             Review
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/rate.html">
+                              <a class="link-menu" href="/Alamanda-FE/rate.html">
                             <span class="fa fa-ravelry  icon-menus"></span>
                             Rate
                           </a>
                             </div>
                             <div class="title-menu">
-                              <a class="link-menu" href="/contact.html">
+                              <a class="link-menu" href="/Alamanda-FE/contact.html">
                             <span class="fa fa-envelope  icon-menus"></span>
                             Contactus
                           </a>
@@ -157,21 +157,21 @@
             <div class="center">
               <div class="item-gallery">
                 <div class="body-bg">
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum1.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum1.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum2.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum2.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum3.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum3.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum4.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum4.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum5.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum5.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum6.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum6.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum7.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum7.png')">
                   </div>
                 </div>
                 <div class="next-prev">
@@ -179,21 +179,21 @@
                   <span class="fa fa-angle-right right"></span>
                 </div>
                 <div class="body-img">
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum1.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum1.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum2.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum2.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum3.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum3.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum4.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum4.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum5.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum5.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum6.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum6.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(images/gallery/thum7.png)">
+                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum7.png)">
                   </div>
                 </div>
               </div>
@@ -237,7 +237,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-3dd17cd6b7.min.js"></script>
+  <script src="scripts/vendor-20ac8f67b1.min.js"></script>
 
 
 </body>
