update code allamanda v2

--- a/contact.html
+++ b/contact.html
@@ -65,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -156,7 +156,7 @@
           <div class="row">
             <div class="center">
               <div class="body-review">
-                <div class="bg-review" style="background-image: url('../../images/contact/slider-contact.png')">
+                <div class="bg-review" style="background-image: url('images/contact/slider-contact.png')">
                   <div class="title-review">
                     <h3 class="title">Contact Us</h3>
                   </div>
