--- a/detailgallery.html
+++ b/detailgallery.html
@@ -65,7 +65,7 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/">
-                <img class="stl-img" src="../../images/logowhite.png" alt="logo">
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
                 <div class="menu">
@@ -157,21 +157,21 @@
             <div class="center">
               <div class="item-gallery">
                 <div class="body-bg">
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum1.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum1.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum2.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum2.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum3.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum3.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum4.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum4.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum5.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum5.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum6.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum6.png')">
                   </div>
-                  <div class="gallerydetail-slider" style="background-image: url('../../images/gallery/thum7.png')">
+                  <div class="gallerydetail-slider" style="background-image: url('images/gallery/thum7.png')">
                   </div>
                 </div>
                 <div class="next-prev">
@@ -179,21 +179,21 @@
                   <span class="fa fa-angle-right right"></span>
                 </div>
                 <div class="body-img">
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum1.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum1.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum2.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum2.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum3.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum3.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum4.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum4.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum5.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum5.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum6.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum6.png)">
                   </div>
-                  <div class="item-villadetail" style="background-image: url(../../images/gallery/thum7.png)">
+                  <div class="item-villadetail" style="background-image: url(images/gallery/thum7.png)">
                   </div>
                 </div>
               </div>
