--- a/contact.html
+++ b/contact.html
@@ -64,7 +64,7 @@
             <div class="center">
               <div class="body-header">
                 <div class="logo">
-                  <a href="/">
+                  <a href="/Alamanda-FE">
                 <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
