--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <link rel="stylesheet" href="styles/style-bad6d753d1.min.css">
   <!-- endbuild -->
   <!-- css slick -->
 
@@ -64,7 +64,7 @@
             <div class="center">
               <div class="body-header">
                 <div class="logo">
-                  <a href="/Alamanda-FE">
+                  <a href="/">
                 <img class="stl-img" src="images/logowhite.png" alt="logo">
               </a>
                 </div>
@@ -83,9 +83,9 @@
                     <div class="body-menu">
                       <div class="menu-top">
                         <div class="center">
-                          <div class="item-menu">
+                          <div class="title-menu">
                             <div class="title-menu">
-                              <a class="link-menu color-white" href="/Alamanda-FE">
+                              <a class="link-menu" href="/Alamanda-FE">
                             <span class="fa fa-home icon-menus"></span>
                             home
                           </a>
@@ -161,41 +161,39 @@
                   <div class="body-gallery">
                     <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc5.png)">
                       <h3 class="title-villa">
-                        <a class="txt-link" href="/detailgallery.html">Villas Sen</a>
+                        <a class="txt-link" href="/Alamanda-FE/detailgallery.html">Villas Sen</a>
                       </h3>
                     </div>
                     <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgb.png)">
                       <h3 class="title-villa">
-                        <a href="/detailgallery.html" class="txt-link">Villas Mai</a>
+                        <a href="/Alamanda-FE/detailgallery.html" class="txt-link">Villas Mai</a>
                       </h3>
                     </div>
                     <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
-                        <a href="/detailgallery.html" class="txt-link">Villas Anh</a>
-                      </h3>
-                    </div>
-
-                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
-                      <h3 class="title-villa">
-                        <a href="/detailgallery.html" class="txt-link">Bedroom</a>
+                        <a href="/Alamanda-FE/detailgallery.html" class="txt-link">Villas Anh</a>
                       </h3>
                     </div>
 
                     <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
-                        <a href="/detailgallery.html" class="txt-link">Living area</a>
+                        <a href="/Alamanda-FE/detailgallery.html" class="txt-link">Bedroom</a>
+                      </h3>
+                    </div>
+
+                    <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
+                      <h3 class="title-villa">
+                        <a href="/Alamanda-FE/detailgallery.html" class="txt-link">Living area</a>
                       </h3>
                     </div>
                     <div class="item-villa animation w3-animate-zoom" style="background-image: url(images/gallery/bgc3.png)">
                       <h3 class="title-villa">
-                        <a href="/detailgallery.html" class="txt-link">Our awesome services</a>
+                        <a href="/Alamanda-FE/detailgallery.html" class="txt-link">Our awesome services</a>
                       </h3>
                     </div>
                   </div>
                 </div>
-
               </div>
-
             </div>
           </div>
         </div>
@@ -236,7 +234,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-20ac8f67b1.min.js"></script>
+  <script src="scripts/vendor-a276ba209f.min.js"></script>
 
 
 </body>
