--- a/review.html
+++ b/review.html
@@ -44,7 +44,7 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/style-6ccc1bd266.min.css">
+  <link rel="stylesheet" href="styles/style-bad6d753d1.min.css">
   <!-- endbuild -->
   <!-- css slick -->
 
@@ -64,9 +64,9 @@
             <div class="center">
               <div class="body-header">
                 <div class="logo">
-                  <a href="/Alamanda-FE">
-                <img class="stl-img" src="images/logowhite.png" alt="logo">
-              </a>
+                  <a href="/">
+                    <img class="stl-img" src="images/logowhite.png" alt="logo">
+                  </a>
                 </div>
                 <div class="menu">
                   <div class="book-now">
@@ -83,9 +83,9 @@
                     <div class="body-menu">
                       <div class="menu-top">
                         <div class="center">
-                          <div class="item-menu">
+                          <div class="title-menu">
                             <div class="title-menu">
-                              <a class="link-menu color-white" href="/Alamanda-FE">
+                              <a class="link-menu" href="/Alamanda-FE">
                             <span class="fa fa-home icon-menus"></span>
                             home
                           </a>
@@ -277,7 +277,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-20ac8f67b1.min.js"></script>
+  <script src="scripts/vendor-a276ba209f.min.js"></script>
 
 
 </body>
