--- a/gallery.html
+++ b/gallery.html
@@ -44,7 +44,7 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/style-bad6d753d1.min.css">
+  <link rel="stylesheet" href="styles/style-a788fe6013.min.css">
   <!-- endbuild -->
   <!-- css slick -->
 
@@ -64,9 +64,9 @@
             <div class="center">
               <div class="body-header">
                 <div class="logo">
-                  <a href="/">
-                <img class="stl-img" src="images/logowhite.png" alt="logo">
-              </a>
+                  <a href="/Alamanda-FE">
+                    <img class="stl-img" src="images/logowhite.png" alt="logo">
+                  </a>
                 </div>
                 <div class="menu">
                   <div class="book-now">
@@ -193,7 +193,9 @@
                     </div>
                   </div>
                 </div>
+
               </div>
+
             </div>
           </div>
         </div>
