--- a/villas-slide.html
+++ b/villas-slide.html
@@ -172,7 +172,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact2.png')">
                   </div>
-                  <div class="title-slider-living animated w3-animate-zoom">
+                  <div class="title-slider-living animation w3-animate-left">
                     <div class="boder-living"></div>
                     <h3 class="title-living">Layout</h3>
                     <p class="des-living">Nestled amongst lawns, Villa Sen is a tranquil retreat from the busyness of modern life. Completed with complimentary wifi network and a personal guest assistant, Villa Mai is a cluster of eight parashrea stellata wooden chest houses
@@ -182,7 +182,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact4.png')">
                   </div>
-                  <div class="title-slider-living animated w3-animate-zoom">
+                  <div class="title-slider-living animation w3-animate-left ">
                     <div class="boder-living"></div>
                     <h3 class="title-living">Living area</h3>
                     <p class="des-living">The villa has a spacious living room, partially surrounded by a water lily pond overlooking the deck and swimming pool. The living room features an exquisite  Vietnamese craftsmanship  from wooden furnishings to artistic wood carvings.</p>
@@ -191,7 +191,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact5.png')">
                   </div>
-                  <div class="title-slider-living title-slider-quich animated w3-animate-zoom">
+                  <div class="title-slider-living title-slider-quich animation w3-animate-right">
                     <div class="boder-quich-tast"></div>
                     <h3 class="title-quich-tast">Quich facts</h3>
                     <div class="des-quich">
