--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- include head.html -->
-  <title>HTML Boilerplate</title>
+  <title>Allamanda</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
@@ -44,7 +44,7 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/style-a788fe6013.min.css">
+  <link rel="stylesheet" href="styles/style-da4aed298c.min.css">
   <!-- endbuild -->
   <!-- css slick -->
 
@@ -65,8 +65,8 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/Alamanda-FE">
-                    <img class="stl-img" src="images/logowhite.png" alt="logo">
-                  </a>
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
+              </a>
                 </div>
                 <div class="menu">
                   <div class="book-now">
@@ -245,7 +245,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-a276ba209f.min.js"></script>
+  <script src="scripts/vendor-9b5525520c.min.js"></script>
 
 
 </body>
