--- a/villas-slide.html
+++ b/villas-slide.html
@@ -3,7 +3,7 @@
 
 <head>
   <!-- include head.html -->
-  <title>HTML Boilerplate</title>
+  <title>Allamanda Villas</title>
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <meta http-equiv="Content-type" content="text/html;charset=UTF-8">
   <meta name="SKYPE_TOOLBAR" content="SKYPE_TOOLBAR_PARSER_COMPATIBLE">
@@ -44,7 +44,7 @@
   </style>
 
   <!-- include styles.html -->
-  <link rel="stylesheet" href="styles/style-a788fe6013.min.css">
+  <link rel="stylesheet" href="styles/style-da4aed298c.min.css">
   <!-- endbuild -->
   <!-- css slick -->
 
@@ -65,8 +65,8 @@
               <div class="body-header">
                 <div class="logo">
                   <a href="/Alamanda-FE">
-                    <img class="stl-img" src="images/logowhite.png" alt="logo">
-                  </a>
+                <img class="stl-img" src="images/logowhite.png" alt="logo">
+              </a>
                 </div>
                 <div class="menu">
                   <div class="book-now">
@@ -172,7 +172,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact2.png')">
                   </div>
-                  <div class="title-slider-living animation w3-animate-left">
+                  <div class="title-slider-living animated w3-animate-left">
                     <div class="boder-living"></div>
                     <h3 class="title-living">Layout</h3>
                     <p class="des-living">Nestled amongst lawns, Villa Sen is a tranquil retreat from the busyness of modern life. Completed with complimentary wifi network and a personal guest assistant, Villa Mai is a cluster of eight parashrea stellata wooden chest houses
@@ -182,7 +182,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact4.png')">
                   </div>
-                  <div class="title-slider-living animation w3-animate-left ">
+                  <div class="title-slider-living animated w3-animate-left">
                     <div class="boder-living"></div>
                     <h3 class="title-living">Living area</h3>
                     <p class="des-living">The villa has a spacious living room, partially surrounded by a water lily pond overlooking the deck and swimming pool. The living room features an exquisite  Vietnamese craftsmanship  from wooden furnishings to artistic wood carvings.</p>
@@ -191,7 +191,7 @@
                 <div class="item-slider-villas">
                   <div class="thevillas-slider" style="background-image: url('images/contact/slider-contact5.png')">
                   </div>
-                  <div class="title-slider-living title-slider-quich animation w3-animate-right">
+                  <div class="title-slider-quich animated w3-animate-right">
                     <div class="boder-quich-tast"></div>
                     <h3 class="title-quich-tast">Quich facts</h3>
                     <div class="des-quich">
@@ -263,7 +263,7 @@
 
   </div>
   <!-- include scripts.html -->
-  <script src="scripts/vendor-a276ba209f.min.js"></script>
+  <script src="scripts/vendor-9b5525520c.min.js"></script>
 
 
 </body>
